<resources>
    <string name="app_name">PetsFriend</string>
    <string name="title">PetsFriend</string>
    <string name="firebase_status_fmt">status %s</string>
    <string name="google_status_fmt">google status %s</string>
    <string name="default_web_client_id">ssss</string>
    <string name="auth_failed">fail log in</string>
    <string name="auth_successful">log in successfully</string>
    <string name="https_formal_outpost_404701_default_rtdb_firebaseio_com">https://formal-outpost-404701-default-rtdb.firebaseio.com/</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Agreement">I agree with the information</string>
    <string name="My_friend">My Friends</string>
    <string name="Sign_Out">Sign out</string>
    <string name="Name">Name:</string>
    <string name="Email">Email:\n</string>
    <string name="Phone">Phone:</string>
    <string name="Pets_Gender">Pets Gender:</string>
    <string name="Birth_date">Birth date:</string>
    <string name="Change_profile">Change Profile</string>
    <string name="confirm"> Confirm</string>
    <string name="Go_back">Finish</string>
    <string name="chat_go_back">Goback</string>
    <string name="translation">Translation to Chinese</string>
    <string name="create_account">creat account</string>
    <string name="Log_in">Log in</string>
    <string name="forget_password">Forget password</string>
    <string name="auto_password">Autofill</string>
    <string name="Accessability">Accessability</string>
    <string name="User_name">User_Email</string>
    <string name="Password">Password</string>


</resources>