<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"

    android:background="@drawable/friend_backfround">
    <TextView
        android:layout_marginTop="40dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:textSize="70sp"
        android:id="@+id/hi"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <Button
                android:layout_marginLeft="15dp"
                android:id="@+id/accessability"
                android:text="@string/Accessability"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <Button
                android:layout_alignParentRight="true"
                android:id="@+id/btn_translation"
                android:text="@string/translation"
                android:layout_marginRight="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </RelativeLayout>

    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="40dp"
        android:layout_width="match_parent"
        android:layout_height="40dp"

        android:orientation="horizontal"

        >
        <TextView
            android:layout_marginLeft="50dp"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:textSize="17sp"
            android:textColor="#000000"
            android:text="@string/User_name"></TextView>
        <EditText
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:id="@+id/sign_in_email"
            android:hint="Please input username"
            android:inputType="text"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal"

>
        <TextView
            android:layout_marginLeft="50dp"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:textSize="17sp"
            android:textColor="#000000"
            android:text="@string/Password"></TextView>
        <EditText
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:id="@+id/pass"
            android:hint="Please input password"
            android:inputType="textPassword"/>


    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="20dp"
        android:gravity="center_horizontal">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <Button
                    android:layout_marginLeft="15dp"
                    android:id="@+id/forget_password"
                    android:text="@string/forget_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="Press to send reset password email "/>

                <Button
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="10dp"
                    android:id="@+id/autofill_password"
                    android:text="@string/auto_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="Auto fill your account information"/>
            </RelativeLayout>

        </LinearLayout>
        <Button
            android:layout_marginTop="20dp"
            android:id="@+id/btn_create"
            android:text="@string/create_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="Create account!"/>
        <Button
            android:id="@+id/signin"
            android:text="@string/Log_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="Log in!"/>


    </LinearLayout>



</LinearLayout>