<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileFrag"
    android:orientation="vertical">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:background="@drawable/profile_background">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_gravity="center_horizontal"
                android:background="#cccc00"
                android:gravity="center">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/app_name"
                    android:textSize="70dp"
                    android:layout_gravity="center"/>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <Button
                        android:layout_marginTop="10dp"
                        android:layout_marginLeft="10dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Sign_Out"
                        android:id="@+id/prof_sign_out"/>
                    <Button
                        android:layout_marginTop="10dp"
                        android:layout_marginLeft="140dp"

                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/profile_Change_profile"
                        android:text="@string/Change_profile"/>
                </LinearLayout>

                <ImageView
                    android:layout_marginTop="30dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_width="200dp"
                    android:layout_height="100dp"
                    android:src="@drawable/dog"
                    />
                <LinearLayout
                    android:layout_marginTop="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:text="@string/Name"
                        android:textSize="20sp"
                        />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:id="@+id/display_name"
                        android:textSize="20sp"
                        android:text="temp_name"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:text="@string/Email"
                        android:textSize="20sp"
                        />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:id="@+id/display_email"
                        android:textSize="20sp"
                        android:text="temp_email"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:text="@string/Phone"
                        android:textSize="20sp"
                        />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:id="@+id/display_phone"
                        android:text="temp_phone"
                        android:textSize="20sp"
                        />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:textSize="20sp"
                        android:text="@string/Pets_Gender"
                        />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:id="@+id/display_gender"
                        android:textSize="20sp"
                        android:text="temp_gender"
                        />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:textSize="20sp"
                        android:text="@string/Birth_date"
                        />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:id="@+id/display_birth_date"
                        android:textSize="20sp"
                        android:text="temp_date"
                        />
                </LinearLayout>

            </LinearLayout>


        </LinearLayout>

    </ScrollView>








<!--    <ListView-->
<!--        android:layout_marginTop="30dp"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:id="@+id/listview">-->

<!--    </ListView>-->





</LinearLayout>